feat: add bulk delete screenshots functionality

--- a/public/index.html
+++ b/public/index.html
@@ -421,8 +421,11 @@
             <div class="status-message" id="accountStatus"></div>
           </div>
 
-          <div class="section">
-            <h2>Screenshots</h2>
+                    <div class="section">
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+              <h2>Screenshots</h2>
+              <button id="bulkDeleteBtn" class="danger" style="display: none; padding: 8px 16px;">Delete Selected (0)</button>
+            </div>
             <div id="screens"></div>
           </div>
         </div>
