fix: bump script version to bust cache

--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,7 @@
       </div>
     </div>
 
-    <!-- Image preview modal -->
+        <!-- Image preview modal -->
     <div id="imageModal" class="modal">
       <div class="modal-content">
         <button id="modalClose" class="modal-close">×</button>
@@ -428,7 +428,7 @@
       </div>
     </div>
 
-    <script src="/app.js"></script>
+    <script src="/app.js?v=2"></script>
   </body>
 </html>
 
